kubernetes/apps/monitoring/gatus/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus
  namespace: gatus
  annotations:
    external-dns.k8s.io/audience: internal
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Gatus"
    gethomepage.dev/description: "Automated uptime and endpoint monitoring"
    gethomepage.dev/group: "Monitoring & Testing"
    gethomepage.dev/icon: "gatus.svg"
    gethomepage.dev/href: "https://gatus.lab.supermorphic.com"
    gethomepage.dev/pod-selector: "app.kubernetes.io/name=gatus"
    gethomepage.dev/widget.type: "gatus"
    gethomepage.dev/widget.url: "http://gatus.gatus.svc.cluster.local"
spec:
  hostnames:
    - gatus.lab.supermorphic.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: gatus
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
